--- a/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.css
+++ b/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.css
@@ -58,4 +58,7 @@ textarea.ng-touched.ng-invalid {
     font-weight: normal;
     margin-left: 10px;
   }
+  #radio12{
+      background-color:#E9ECEF;
+  }
   
