--- a/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
@@ -1,5 +1,4 @@
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
-    <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
 <div class="container">
     <div class="row">
@@ -84,7 +83,7 @@
                         </div>
                         <div class="form-group">
                             <label for="gender">Purchased Type:<p class="p12">*</p></label>
-                            <div class="form-control">
+                            <div class="form-control" aria-disabled="true" id="radio12">
                                 <div class="custom-control custom-radio custom-control-inline ">
                                     <input type="radio" value="New" name="machieCondition" formControlName="machieCondition" (change)="changeCondition($event)">
                                     <label id="New" for="New">New</label>
