--- a/MyApp/src/app/component/ServiceEngg/update-service-engg/update-service-engg.component.css
+++ b/MyApp/src/app/component/ServiceEngg/update-service-engg/update-service-engg.component.css
@@ -5,12 +5,9 @@
 h3{
     text-align: center;
 }
-
-
 .btn {
     color: #fff;
     border-radius: 4px;
-    background: #60c7c1;
     text-decoration: none;
     transition: all 0.4s;
     line-height: normal;
@@ -21,13 +18,26 @@ h3{
     margin: 0 5px;
     outline: none !important;
 }
-
-.table{
-    /* margin-left: 10px; */
-    /* margin-right: 10px; */
+.table {
     margin-top: 20px;
-    /* margin-bottom: 20px; */
-    /* overflow-x:scroll; */
+    width: 100%;
+    }    
+.table td,th{
+border: 1px solid #ddd;
+padding: 8px;
+}
+.table tr:nth-child(even){
+background-color: #f2f2f2;
+}
+.table tr:hover {
+background-color: #ddd;
+}
+thead, th {
+padding-top: 20px;
+padding-bottom: 12px;
+text-align: left;
+background-color: #4CAF50;
+color: white;
 }
 .form-cpntrol{
     margin: 10px;
