--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.css
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.css
@@ -1,33 +1,45 @@
-.input-group {
-    width: 50%;
-    margin-left: 25%;
+.row{
+    width: 70%;
+    margin-left: 10%;
 }
-
 h3 {
     text-align: center;
+    margin-left: 12%;
 }
-
 .btn {
     border-radius: 10px;
 }
-
 .table {
-    /* margin-left: 10px; */
-    /* margin-right: 10px; */
+    margin-left: 0px;
     margin-top: 20px;
-    /* margin-bottom: 20px; */
-    /* overflow-x:scroll; */
+    /* table-layout: fixed; */
+    }
+.table td,th{
+    border: 1px solid #ddd;
+    padding: 8px;
 }
-
-.form-cpntrol {
+.table tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+.table tr:hover {
+    background-color: #ddd;
+}
+.table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+  }
+.form-control {
     margin: 10px;
+    margin-left: 30%;
     margin-top: 20px;
+    align-items: center;
 }
-
 .btn {
     color: #fff;
     border-radius: 4px;
-    background: #60c7c1;
     text-decoration: none;
     transition: all 0.4s;
     line-height: normal;
@@ -38,12 +50,14 @@ h3 {
     margin: 0 5px;
     outline: none !important;
 }
-
 .btn-danger {
     background: #f15e5e;
 }
-
 .btn-danger:hover,
 .btn-danger:focus {
     background: #ee3535;
+}
+.container{
+    margin: 30px;
+    margin-left: 40px;
 }
