--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <h3>List All Customer</h3>
-    <div class="input-group">
+    <div class="row">
         <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search" [(ngModel)]="u_email" autocomplete="off">
     </div>
 
@@ -32,7 +32,7 @@
                 <td>{{item.u_dateOf_Purchased|date:'dd/MM/yyy'}}</td>
                 <td>{{item.u_password}}</td>
                 <td style="display: flex">
-                    <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]" (click)="customerEdit()">Edit</button>
+                    <button type="button" class="btn btn-primary btn-sm" [routerLink]="['edit',item.u_id]" (click)="customerEdit()">Edit</button>
                     <button type="button" class="btn btn-danger btn-sm ml-1" (click)="openModal(item)">Delete</button>
                 </td>
             </tr>
