--- a/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
+++ b/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
@@ -1,9 +1,9 @@
+<body>
 <div class="container">
     <h3>Service Engineer List</h3>
-    <div class="input-group">
+    <div class="row">
         <input type="text" class="form-control" placeholder="Start searching for a Service Engineer Name or Mobilenumber or Email" name="search" [(ngModel)]="u_email" autocomplete="off">
     </div>
-
     <table class="table">
         <thead>
             <tr>
@@ -12,8 +12,7 @@
                 <th scope="col">Mobile</th>
                 <th scope="col">Email</th>
                 <th scope="col">Address</th>
-                <th scope="col">EnggType</th>
-                <th scope="col">JoiningDate</th>
+                <th scope="col">DateOfJoining</th>
                 <th scope="col">Password</th>
             </tr>
         </thead>
@@ -24,17 +23,18 @@
                 <td>{{item.u_mobile}}</td>
                 <td>{{item.u_email}}</td>
                 <td>{{item.u_address}}</td>
-                <td>{{item.u_EngineerType}}</td>
+                <!-- <td>{{item.u_EngineerType}}</td> -->
                 <td>{{item.u_joinDate |date:'dd/MM/yyy'}}</td>
                 <td>{{item.u_password}}</td>
                 <td style="display: flex">
-                    <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]" (click)="editServiceEngg()">Edit</button>
+                    <button type="button" class="btn btn-primary btn-sm" [routerLink]="['edit',item.u_id]" (click)="editServiceEngg()">Edit</button>
                     <button type="button" class="btn btn-danger btn-sm ml-1" (click)="openModal(item)">Delete</button>
                 </td>
             </tr>
         </tbody>
     </table>
 </div>
+</body>
 
 <router-outlet></router-outlet>
 
@@ -49,7 +49,7 @@
                 <p>Do you really want to delete these records? This process cannot be undone.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-danger" data-dismiss="modal" name="delete" (click)="delete(item)">Delete</button>
             </div>
         </div>
