--- a/MyApp/src/app/component/chart/chart.component.css
+++ b/MyApp/src/app/component/chart/chart.component.css
@@ -1,113 +1,69 @@
-#barchart2{
-    height: auto;
-    width: 30%;
-    padding: 20px;
-    margin-top: 70px;
-    margin-left: 50px;
-    display: inline-block;
-  }
-  
-  #piechart12{
-    height: auto;
-    width: 30%;
-    padding: 20px;
-    margin-left: 50px;
-    margin-top: 70px;
-    margin-bottom:70px;
-    display: inline-block;
-  
-  }
-  #p1{
-    text-align: center;
-  }
-  footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height:10px ;
-  padding-top: 20px !important;
-  padding-bottom: 40px !important;
-  }
-  nav
-  {
-    padding-top: 15px !important;
-  padding-bottom: 15px !important;
-  
-  } 
-  
-  .fas{
-  margin-left: 10px !important;
-  margin-right: 10px !important;
-  
-  }
-   .nav-link.dropdown-toggle {
-    background-color: #343a40;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  .nav-item.dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  /*
-  .dropdown-menu{
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  /*/
-  .dropdown-menu a {
-    
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-menu a:hover {background-color: rgb(30, 135, 233);}
-  
-  .nav-item.dropdown :hover .dropdown-content {display: block;}
-  
-  .nav-item.dropdown :hover.nav-link.dropdown-toggle{background-color: #3e8e41;}
-  
-   
-  .navbar-brand.badge {
-    display: inline-block;
-    padding-top: .3125rem;
-    padding-bottom: .3125rem;
-    margin-right: 1rem;
-    font-size: 1rem;
-    line-height: inherit;
-    white-space: nowrap;
-  }
-  .navbar-brand  :hover{background-color: #3e8e41;}
-  
-  
-  .col-md-2{
-  position: relative !important;
-   width: 100% !important;  
-  padding-left: 0px !important;
-  margin-top: 8px;
-  }
-  
-  .col-md-4 {
-    -webkit-box-flex: 0;
-    flex-direction: row-reverse  !important;
-    max-width: width 100% !important;
-    display: flex;
-    margin-top: 14px;
-  }
-  /* .row{
-    width: 100%;
-    max-width: 1600px !important;
-  } */
-  .container{
-    margin-left: 0px !important;
-    margin-right: 0px !important;
-  }
+.box{
+  /* border: 1px solid black; */
+  /* padding: 10px; */
+  margin-right: 0px;
+  border-radius: 5px;
+  background-color: #E5E4E2;
+  color: black;
+}
+.chart-container{
+ /* margin-left: 10px; */
+  height:30vh; 
+  width:40vw;
+  margin-top: 30px !important;
+  margin-bottom: 80px;
+  float: left;
+  margin-left: 0px;
+}
+.fa{
+  font-size: 30px;
+  margin-left: 100px;
+  margin-top: 10px;
+  color:white;
+}
+.h4{
+  text-align: center;
+}
+.count{
+  font-size: 20px;
+  font-weight: bold;  
+  margin-left: 70px;
+}
+.lable{
+  margin-left: 60px;
+}
+.box1{
+  background-color: #3EA055;
+}
+.box2{
+  background-color: #2B60DE;
+}
+.box3{
+  background-color: orange;
+}
+.piechartBox{
+  border: 1px solid black;
+  margin-top: 20px;
+  height: 100%;
+  border-radius: 5px;
+  background-color: #E5E4E2;
+}
+.status{
+  border: 1px solid black;
+  margin-top: 50px;
+  height: 50%;
+  border-radius: 5px;
+  background-color: #E5E4E2;
+}
+.graph{
+  border: 1px solid yellow;
+  width: 100%;
+  padding: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+  /* height: 100%; */
+}
+.bargraph{
+  height:100%
+}
+
