--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -1,13 +1,57 @@
-
-
-<div class="chart-container"  style="float: left; height:30vh; width:50vw;margin-top: 100px !important;">    
-   <canvas id="canvas"></canvas>    
- </div>
-
-
- <div *ngFor='let user of users' style="text-align: center;">
-  <h2>
-         {{user.u_joinDate}}    </h2>
-</div>
-
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="container">
+  <div class="row">
+    <div class="col-md-3 offset-md-3 ">
+      <div class="box box1">
+        <span class="count"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
+        <span class="lable">Users</span>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="box box2">
+        <span class="count">{{enggCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
+        <span class="lable">Engineers</span>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="box box3">
+        <span class="count">{{adminCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
+        <span class="lable">Admin</span>
+      </div>
+    </div>
+  </div>
+  <!--second Row  -->
+  <div class="row">
+    <div class="col-md-6">
+      <div class="piechartBox bargraph">
+        Adding service engginear,customer
+        <!--  Display date -->
+        <div class="setdate" *ngFor='let user of users'>
+          <h2>
+            {{user.u_joinDate}}
+          </h2>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="piechartBox">
+        <div class="chart-container">
+          <canvas id="canvas"></canvas>
+        </div>
+      </div>
+    </div>
+    </div>
+    <!-- Third Row -->
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <div class="status">
+          Pending Status
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="status">
+        Closed Status  
+        </div>
+      </div>
+    </div>
+  </div>
