--- a/MyApp/src/app/component/customer/update-customer/update-customer.component.css
+++ b/MyApp/src/app/component/customer/update-customer/update-customer.component.css
@@ -1,29 +1,46 @@
-.input-group{
-    width: 50%;
-    margin-left:25%;
+.row{
+    width: 70%;
+    margin-left:8%;
 }
 h3{
     text-align: center;
+    margin-left: 5%;
 }
 .btn{
     border-radius: 10px;
 }
 .table{
-    /* margin-left: 10px; */
-    /* margin-right: 10px; */
     margin-top: 20px;
-    /* margin-bottom: 20px; */
-    /* overflow-x:scroll; */
+    margin-left: 0px;
 }
-.form-cpntrol{
+.table td,th{
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+.table tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+.table tr:hover {
+    background-color: #ddd;
+}
+.table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+  }
+.form-control {
     margin: 10px;
+    margin-left: 30%;
     margin-top: 20px;
+    align-items: center;
 }
 /* Edit Button */
 .btn {
     color: #fff;
     border-radius: 4px;
-    background: #60c7c1;
+    /* background: #60c7c1; */
     text-decoration: none;
     transition: all 0.4s;
     line-height: normal;
@@ -34,6 +51,6 @@ h3{
     margin: 0 5px;
     outline: none !important;
 }
-.btn-success:hover, .btn-success:focus {
+/* .btn-success:hover, .btn-success:focus {
     background: skyblue;
-}
+} */
