--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -1,5 +1,4 @@
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
-    <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
 
     <!-- Navigation -->
@@ -9,7 +8,7 @@
             <div class="collapse navbar-collapse float-left" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                         <a class="navbar-brand" routerLink="/home1"(click)="showButton(2)" [class.phase-active]="activeButton === 2" > <i class="fas fa-home"></i>Admin Home</a>                       
+                         <a class="navbar-brand" routerLink="/home1"(click)="showButton(2)" [class.phase-active]="activeButton === 2" > <i class="fas fa-home"></i>Ticketing Tool</a>                       
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" 
