--- a/MyApp/src/app/component/service-engineer/service-engineer.component.html
+++ b/MyApp/src/app/component/service-engineer/service-engineer.component.html
@@ -1,6 +1,5 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
-    <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
 
 <div class="container">
@@ -8,7 +7,7 @@
         <div class="col-md-8 mx-auto">
             <div class="card">
                 <div class="card-header">
-                    <h3> Registration </h3>
+                    <h3> Add New ServiceEngineer </h3>
                 </div>
                 <div class="card-body">
                     <form class="form" [formGroup]="formGroup" (ngSubmit)="onSubmit(fb)">
@@ -70,8 +69,6 @@
                                 </div>
                             </ng-container>
                         </div>
-
-
                         <div class="form-group">
                             <label>Address<p class="p12">*</p></label>
                             <textarea class="form-control" formControlName="Address"
@@ -86,7 +83,6 @@
                                 </div>
                             </ng-container>
                         </div>
-
                         <div class="form-group">
                             <label>Engineer Type<p class="p12">*</p></label>
                             <!-- <input  class="custom-select" (change)="changeCity($event)" formControlName="Machine_purchase" placeholder="select Machine"> -->
@@ -94,7 +90,6 @@
                                 <option value="">Choose engg type</option>
                                 <option *ngFor="let engg of enggList; let i= index" value="{{engg.name}}" [selected]="i == 0">{{engg.name}}</option>
                             </select>
-
                             <div class="validation-errors">
                                 <ng-container *ngFor="let validation of validation_messages.EngineerType">
                                     <div class="error-message text-danger"
@@ -168,29 +163,6 @@
                                 </div>
                             </ng-container>
                         </div>
-                        <!-- <div  id="serviceEnggModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog">
-                          
-                              
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                  </div>
-                                <div class="modal-body">
-                                    <div class="alert alert-success fade show" *ngIf="showSuccessMsg" >
-                                        <strong>Success!</strong>Registration Successfully!
-                                    </div>
-                                    <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
-                                        <strong>Error! </strong>The email address or phone number you have entered is already registered!.
-                                    </div>                                                                        
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                </div>
-                              </div>                        
-                            </div>
-                          </div>                     -->
-
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary" id="Registerbutton"  [disabled]="!formGroup.valid">
                                 Register
