--- a/MyApp/src/app/component/chart/chart.component.css
+++ b/MyApp/src/app/component/chart/chart.component.css
@@ -1,15 +1,20 @@
 .box{
-  /* border: 1px solid black; */
-  /* padding: 10px; */
+margin-top: 20px;
   margin-right: 0px;
   border-radius: 5px;
   background-color: #E5E4E2;
   color: black;
 }
+.row1{
+  margin-top: 0px;
+}
 .chart-container{
  /* margin-left: 10px; */
-  height:30vh; 
-  width:40vw;
+  height:35vh; 
+  width:35vw;
+  position: relative;
+  /* height: auto; */
+  /* width: auto; */
   margin-top: 30px !important;
   margin-bottom: 80px;
   float: left;
@@ -41,29 +46,13 @@
 .box3{
   background-color: orange;
 }
-.piechartBox{
-  border: 1px solid black;
+.panel{
   margin-top: 20px;
-  height: 100%;
+  /* height: 100%; */
   border-radius: 5px;
-  background-color: #E5E4E2;
 }
 .status{
-  border: 1px solid black;
   margin-top: 50px;
   height: 50%;
   border-radius: 5px;
-  background-color: #E5E4E2;
 }
-.graph{
-  border: 1px solid yellow;
-  width: 100%;
-  padding: 20px;
-  margin-left: 15px;
-  margin-right: 15px;
-  /* height: 100%; */
-}
-.bargraph{
-  height:100%
-}
-
