--- a/MyApp/src/app/component/customer/update-customer/update-customer.component.html
+++ b/MyApp/src/app/component/customer/update-customer/update-customer.component.html
@@ -1,10 +1,12 @@
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+
 <div class="container">
     <h3> Customer Details</h3>
     <div class="row">
       <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search" 
       [(ngModel)]="u_email" autocomplete="off">
   </div>
-    
+    <!-- <div class="panel panel-default"> -->
     <table class="table">
       <thead>
         <tr>
@@ -34,6 +36,7 @@
         </tr>
       </tbody>
     </table> 
+    <!-- </div> -->
   </div>
 <!-- 
   <router-outlet></router-outlet> -->
