--- a/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.css
+++ b/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.css
@@ -12,3 +12,10 @@ thead {
 .container{
   margin-bottom: 30px !important;
 }
+input.ng-touched.ng-invalid {
+  border: 1px solid red;   
+}
+
+select.ng-touched.ng-invalid {
+  border: 1px solid red;   
+}
