--- a/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
+++ b/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
@@ -7,13 +7,12 @@
             <div class='card-header' id="r1">
                 <b> {{pageTitle}}</b>
             </div>
-            <div class='card-body' >
+            <div class='card-body'>
                 <div class='row'>
                     <div class='col-md-1' style="margin-left: 21px;margin-top: 5px; font-size: medium;"><b>Filter By</b>
                     </div>
                     <div class='col-md-8'>
-                        <input style="margin-bottom: 17px;" class="form-control" type="text" name="search"
-                            [(ngModel)]="searchText" autocomplete="off" />
+                        <input style="margin-bottom: 17px;" class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" />
                     </div>
                 </div>
                 <div class='row' *ngIf='listFilter'>
@@ -56,23 +55,22 @@
 </div>
 <!-- Modal  -->
 <div id="customerModal" class="modal fade" role="dialog">
-    <div  >
+    <div>
         <div class="modal-dialog">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <h2 style="color: #337ab7;">Complaint Details </h2>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div >
-                <div class="modal-body" >
+                </div>
+                <div class="modal-body">
                     <div class="alert alert-success fade show">
                         <div class="row" style="margin-top:8px">
                             <div class="col-md-2">
                                 <label style="margin-top:12px"><b>Complaint Id:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="engg_id" [ngModel]="assignData.c_id" class="form-control"
-                                    id="engg_id" disabled>
+                                <input type="text" name="c_id" [ngModel]="assignData.c_id" class="form-control" id="c_id" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -80,8 +78,7 @@
                                 <label style="margin-top:12px"><b>Customer Name:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="engg_name" [ngModel]="assignData.c_name" class="form-control"
-                                    id="engg_name" disabled>
+                                <input type="text" name="engg_name" [ngModel]="assignData.c_name" class="form-control" id="engg_name" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -89,8 +86,7 @@
                                 <label style="margin-top:12px"><b>Mobile Number:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="engg_name" [ngModel]="assignData.u_mobile" class="form-control"
-                                    id="engg_name" disabled>
+                                <input type="text" name="engg_name" [ngModel]="assignData.u_mobile" class="form-control" id="engg_name" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -98,8 +94,7 @@
                                 <label style="margin-top:12px"><b>Alternative Mobile Number:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="engg_name" [ngModel]="assignData.u_altermobile"
-                                    class="form-control" id="engg_name" disabled>
+                                <input type="text" name="engg_name" [ngModel]="assignData.u_altermobile" class="form-control" id="engg_name" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -107,8 +102,7 @@
                                 <label style="margin-top:12px"><b>Email:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" [ngModel]="assignData.u_email" class="form-control"
-                                    id="Email" disabled>
+                                <input type="text" name="Email" [ngModel]="assignData.u_email" class="form-control" id="Email" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -117,8 +111,7 @@
                                 <label style="margin-top:12px"><b>Description:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" [ngModel]="assignData.c_desc" class="form-control"
-                                    id="Email" disabled>
+                                <input type="text" name="Email" [ngModel]="assignData.c_desc" class="form-control" id="Email" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -126,8 +119,7 @@
                                 <label style="margin-top:12px"><b>Complaint Date:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" [ngModel]="assignData.c_date" class="form-control"
-                                    id="Email" disabled>
+                                <input type="text" name="Email" [ngModel]="assignData.c_date" class="form-control" id="Email" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -135,8 +127,7 @@
                                 <label style="margin-top:12px"><b>Photos:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" placeholder="N/A" class="form-control" id="Email"
-                                    disabled>
+                                <input type="text" name="Email" placeholder="N/A" class="form-control" id="Email" disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 15px;">
@@ -144,17 +135,15 @@
                                 <label style="margin-top:12px"><b>Status:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" [ngModel]="assignData.c_status" class="form-control"
-                                    id="Email" disabled>
+                                <input type="text" name="Email" [ngModel]="assignData.c_status" class="form-control" id="Email" disabled>
                             </div>
                         </div>
                         <div class="row" [formGroup]="formGroup" style="margin-top: 15px;">
                             <div class="col-md-2">
                                 <label style="margin-top:12px"><b>Comments:</b></label>
                             </div>
-                            <div class="col-md-10"  >
-                                <input type="text" name="comments " formControlName="comments" placeholder="Write your comments"  
-                                class="form-control " id="Email" [ngClass]="{ 'is-invalid': submitted && f.comments.errors?.invalid }">
+                            <div class="col-md-10">
+                                <input type="text" name="comments " formControlName="comments" placeholder="Write your comments" class="form-control " id="Email" [ngClass]="{ 'is-invalid': submitted && f.comments.errors?.invalid }">
                             </div>
                         </div>
                         <div class="validation-errors">
@@ -171,7 +160,7 @@
                             <div class="col-md-10 ">
                                 <select class="form-control " placeholder="Change Status" formControlName="Status">
                                     <option value="">Choose your Status</option>
-                                    <option *ngFor="let machine of Machinelist;let i=index " value="{{machine.name}} "
+                                    <option *ngFor="let machine of Machinelist;let i=index " value="{{machine.key}} "
                                         [selected]="i==0 ">{{machine.name}} </option>
                                 </select>
                                 <div class="validation-errors">
@@ -183,9 +172,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit " class="btn btn-primary btn-lg btn-block "
-                            style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important; "
-                            data-dismiss="modal " (click)="addData()" [disabled]="!formGroup.valid">ADD DATA</button>
+                        <button type="submit " class="btn btn-primary btn-lg btn-block " style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important; " data-dismiss="modal " (click)="addData()" [disabled]="!formGroup.valid">ADD DATA</button>
                     </div>
                 </div>
             </div>
