--- a/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
+++ b/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
@@ -172,7 +172,31 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit " class="btn btn-primary btn-lg btn-block " style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important; " data-dismiss="modal " (click)="addData()" [disabled]="!formGroup.valid">ADD DATA</button>
+
+                        <div id="serviceEnggModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="alert alert-success fade show" *ngIf="showSuccessMsg">
+                                            <strong>Success!</strong>Registration Successfully!
+                                        </div>
+                                        <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
+                                            <strong>Error! </strong>The email address or phone number you have entered is already registered!.
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <button type="submit " class="btn btn-primary btn-lg btn-block " style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important; " data-toggle="modal" data-target="#serviceEnggModal" (click)="addData()" [disabled]="!formGroup.valid">ADD DATA</button>
                     </div>
                 </div>
             </div>
