--- a/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
@@ -1,58 +1,55 @@
-
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
     <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
-        <div class="col-md-8">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
+    <div class="col-md-8">
 
-            <div class="collapse navbar-collapse float-left" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                         <a class="navbar-brand" routerLink="/app-cust-home"(click)="showButton(2)" [class.phase-active]="activeButton === 2" > <i class="fas fa-home"></i>Customer Home</a>                       
-                    </li>
-                    <li class="nav-item">
-                        <a class="notification" routerLink="app-cust-raise-complaint"  (click)="loader()" >
-                            <i class="fas fa-chalkboard-teacher"></i>Raise Complaint</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="notification" id="a1"  routerLink="app-view-previous-complaint"  (click)="loader()"> <i class="far fa-clipboard"></i>
-               View Privios Complaint</a>
-                       
-                    </li>
+        <div class="collapse navbar-collapse float-left" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="navbar-brand" routerLink="/app-cust-home" (click)="showButton(2)" [class.phase-active]="activeButton === 2"> <i class="fas fa-home"></i>Ticketing Tool</a>
+                </li>
+                <li class="nav-item">
+                    <a class="notification" routerLink="app-cust-raise-complaint" (click)="loader()">
+                        <i class="fas fa-chalkboard-teacher"></i>Raise Complaint</a>
+                </li>
+                <li class="nav-item">
+                    <a class="notification" id="a1" routerLink="app-view-previous-complaint" (click)="loader()"> <i class="far fa-clipboard"></i> View Previous Complaint</a>
 
-                </ul>
-            </div>
+                </li>
 
-
-        </div>
-        <div class="col-md-4">
-            <div class="collapse navbar-collapse float-right" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-
-                    <li class="nav-item">
-                        <a href="#" class="notification">
-                            <span>Notification</span>
-                            <i class="fas fa-bell">  <span class="badge">3</span></i>
-                          
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="notification">
-                            <span>Logout</span>
-                            <i class="fas fa-sign-out-alt"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            </ul>
         </div>
 
 
+    </div>
+    <div class="col-md-4">
+        <div class="collapse navbar-collapse float-right" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <li class="nav-item">
+                    <a href="#" class="notification">
+                        <span>Notification</span>
+                        <i class="fas fa-bell">  <span class="badge">3</span></i>
+
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="notification">
+                        <span>Logout</span>
+                        <i class="fas fa-sign-out-alt"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
 
-    </nav>
+</nav>
