--- a/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
-    <p class="loading">Loading Awesomeness...</p>
+    <p class="loading"></p>
 </ngx-spinner>
 
 <div class="container" *ngIf="complaint">
